--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <button id="main-btn">Add to favorites</button>
     <script src="main.js"></script>
-  </body>
+  </body>        
 </html>
