--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
   </head>
   <body>
+
+    <button id="main-btn">Add to favorites</button>
+    <button id="second-btn">PRESS ME</button>
+
+    <div id="container">CLICK A BUTTON TO START</div>
+
     <script src="main.js"></script>
-  </body>
+  </body>        
 </html>
