created function for pie builder, colors per page, filters

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             Trinity
           </button>
         </div>
-        <div id="pies"></div>
-        <hr />
+        <div id="pies" class="d-flex flex-wrap justify-content-around"></div>
+        <hr>
         <div class="pie-form"></div>
       </div>
     </div>
