--- a/index.html
+++ b/index.html
@@ -62,13 +62,11 @@
 
         <div class="mb-3">
           <label for="instructor" class="form-label">Instructor</label>
-          <!-- <input type="select" class="form-control" id="instructor" required /> -->
-
-          <select class="form-select" aria-label="Default select example">
+          <select id ="instructor" class="form-select" aria-label="Default select example">
             <option selected></option>
-            <option value="1">Dr. T</option>
-            <option value="2">Aja</option>
-            <option value="3">Trinity</option>
+            <option value="Doc">Dr. T</option>
+            <option value="Aja">Aja</option>
+            <option value="Trinity">Trinity</option>
           </select>
         </div>
 
